[build-system]
requires = ["setuptools>=65.0.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "refuel-autolabel"
version = "0.0.1"
description = "Library for LLM powered labeling"
readme = "README.md"
authors = [{ name = "Refuel.ai", email = "support@refuel.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "loguru >= 0.5.0",
    "numpy >= 1.23.0",
    "requests >= 2.27.0",
    "anthropic >= 0.2.6",
    "datasets >= 2.7.0",
    "langchain",
    "matplotlib >= 3.5.0",
    "nervaluate >= 0.1.8",
    "openai >= 0.27.4",
    "pandas >= 1.3.0",
    "scikit-learn >= 1.0.0",
    "tenacity >= 8.2.2",
    "tiktoken >= 0.3.3",
    "torch >= 1.10.0",
    "transformers >= 4.25.0",
    "SQLAlchemy == 1.4.47"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "pip-tools",
    "pytest",
    "gdown",
    "pre-commit"
]

[project.urls]
Homepage = "https://github.com/refuel-ai/autolabel"
