[build-system]
requires = ["setuptools>=65.0.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "refuel-autolabel"
version = "0.0.5"
description = "Label, clean and enrich text datasets with LLMs"
readme = "README.md"
authors = [{ name = "Refuel.ai", email = "support@refuel.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "loguru >= 0.5.0",
    "numpy >= 1.23.0",
    "requests >= 2.27.0",
    "datasets >= 2.7.0",
    "langchain == 0.0.210",
    "nervaluate >= 0.1.8",
    "pandas >= 1.3.0",
    "scikit-learn >= 1.0.0",
    "tenacity >= 8.2.2",
    "SQLAlchemy == 1.4.47",
    "regex >= 2023.6.3",
    "rich >= 13.3.5",
    "scipy >= 1.10.1",
    "pydantic >= 1.10.9",
    "torch >= 1.10.0",
    "matplotlib >= 3.5.0",
    "wget >= 3.2"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-table-reader-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "pip-tools",
    "pytest",
    "pytest-mock",
    "pre-commit"
]
openai = [
    "openai >= 0.27.4",
    "tiktoken >= 0.3.3"
]
anthropic = [
    "anthropic >= 0.2.6"
]
huggingface = [
    "transformers >= 4.25.0"
]
google = [
    "google-cloud-aiplatform>=1.25.0"
]
all = [
    "black",
    "bumpver",
    "pip-tools",
    "pytest",
    "pytest-mock",
    "pre-commit",
    "openai >= 0.27.4",
    "tiktoken >= 0.3.3",
    "anthropic >= 0.2.6",
    "transformers >= 4.25.0",
    "google-cloud-aiplatform>=1.25.0"
]

[project.urls]
Homepage = "https://github.com/refuel-ai/autolabel"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
