[build-system]
requires = ["setuptools>=65.0.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "refuel-autolabel"
version = "0.0.16"
description = "Label, clean and enrich text datasets with LLMs"
readme = "README.md"
authors = [{ name = "Refuel.ai", email = "support@refuel.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "loguru >= 0.5.0",
    "numpy == 1.26.4",
    "requests >= 2.27.0",
    "datasets >= 2.7.0",
    "langchain == 0.3.7",
    "nervaluate >= 0.1.8",
    "pandas >= 1.3.0",
    "scikit-learn >= 1.0.0",
    "tenacity >= 8.2.2",
    "SQLAlchemy >= 2.0.19",
    "regex >= 2023.6.3",
    "rich >= 13.3.5",
    "scipy >= 1.10.1",
    "pydantic == 1.10.9",
    "wget >= 3.2",
    "ipywidgets == 8.0.6",
    "jsonschema >= 4.17.3",
    "tabulate >= 0.9.0",
    "typer[all] >= 0.9.0",
    "simple-term-menu >= 1.6.1",
    "transformers >= 4.25.0",
    "html2text == 2020.1.16",
    "pylcs == 0.1.1"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-table-reader-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "pip-tools",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pre-commit"
]
openai = [
    "openai == 1.45.0",
    "tiktoken >= 0.7.0"
]
anthropic = [
    "anthropic == 0.34.2"
]
huggingface = [
    "transformers >= 4.25.0",
    "sentence-transformers==2.3.1"
]
google = [
    "tiktoken >= 0.7.0",
    "google-cloud-aiplatform==1.56.0",
    "langchain-google-vertexai==1.0.10",
]
cohere = [
    "cohere>=4.11.2"
]
minimal = [
    "boto3==1.33.3",
    "openai==1.45.0",
    "langchain==0.2.16",
    "langchain-anthropic==0.1.23",
    "langchain-core==0.2.40",
    "langchain-community==0.2.17",
    "langchain-openai==0.1.24",
    "langchain-google-vertexai==1.0.10",
    "tiktoken >= 0.7.0",
    "anthropic == 0.34.2",
    "transformers >= 4.25.0",
    "google-cloud-aiplatform==1.56.0",
    "google-search-results>=2.4.2",
    "redis >= 3.5.3",
    "pdfplumber >= 0.10.2",
    "pdf2image >= 1.16.3",
    "pytesseract == 0.3.10",
    "beautifulsoup4 >= 4.12.2",
    "httpx",
    "fake_useragent==1.4.0",
    "scrapingbee==2.0.1",
    "pillow >= 9.5.0",
    "pydantic == 1.10.9",
    "json5==0.9.25",
]
all = [
    "black",
    "boto3==1.33.3",
    "bumpver",
    "pip-tools",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pre-commit",
    "openai==1.45.0",
    "langchain==0.2.16",
    "langchain-anthropic==0.1.23",
    "langchain-core==0.2.40",
    "langchain-community==0.2.17",
    "langchain-openai==0.1.24",
    "langchain-google-vertexai==1.0.10",
    "tiktoken >= 0.7.0",
    "anthropic == 0.34.2",
    "transformers >= 4.25.0",
    "google-cloud-aiplatform==1.56.0",
    "google-search-results>=2.4.2",
    "cohere>=4.11.2",
    "redis >= 3.5.3",
    "sentence-transformers==2.3.1",
    "sentencepiece==0.2.0",
    "pdfplumber >= 0.10.2",
    "pdf2image >= 1.16.3",
    "pytesseract == 0.3.10",
    "beautifulsoup4 >= 4.12.2",
    "httpx",
    "torch >= 1.10.0",
    "matplotlib >= 3.5.0",
    "fake_useragent==1.4.0",
    "scrapingbee==2.0.1",
    "pillow >= 9.5.0",
    "pydantic == 1.10.9",
    "json5==0.9.25"
]

[project.urls]
Homepage = "https://github.com/refuel-ai/autolabel"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[project.scripts]
autolabel = "autolabel.cli.main:app"